--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "source": "index.html",
   "scripts": {
     "start": "parcel index.html --no-cache",
-    "build": "parcel build index.html -dist-dir ./dist"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "keywords": [],
   "author": "Raquel Velasco",
